--- a/index.html
+++ b/index.html
@@ -2,9 +2,54 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <title>Fishing| Howard's Lakeside General Store</title>
   </head>
   <body>
-    
-  </body>
+    <div>
+      Howards Lakeside General Store
+<a href="index.html">Home</a>
+<a href="https://www.facebook.com/Howards-Lakeside-General-Store-424457621477830/?view_public_for=424457621477830">facebook</a>
+<a href="mailto:howardslakeside@gmail.com">email</a>
+<a href="tel:9375051037">Call Us!</a>
+<a href="https://www.google.com/maps/place/Howard's+Lakeside+General+Store/@39.9477777,-83.751398,17.25z/data=!4m5!3m4!1s0x883f5130f81985dd:0x39561b9624015afe!8m2!3d39.947708!4d-83.7489413"> Location</a>
+<a href="services.html">Our Bait Menu</a>
+    </div>
+
+      <img src="cover.webp" alt="store logo" width="1350" height="600">
+
+      <div class ="about">
+<h3>Welcome to lakeside!</h3>
+<h4>Our Services Include</h4>
+  <ul> Live bait</ul>
+  <ul>Tackle</ul>
+  <ul>Fishing and hunting licences</ul>
+  <ul>Camping</ul>
+  <ul>Firewood​</ul>
+  <ul>Drinks</ul>
+  <ul>Pop</ul>
+  <ul>Snacks</ul>
+<h4> We also offer respooling! </h4>
+
+      </div>
+
+      <div class="clearer">
+      </div>
+
+      <div class="menu">
+        <table>
+          <tr>
+            <td> Live bait </td>
+            <td>Live Fish</td>
+            <td>Chubbs</td>
+            <td>Catfish</td>
+            <td>Cold Bait</td>
+          </tr>
+      </div>
+
+    </body>
+
+<footer>
+</footer>
 </html>
